<resources>
    <string name="app_name">Login</string>

    <string name="CaretAccount">Caret Your Account</string>
    <string name="AlreadyHaveAccount">Already Have An Account ?</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="SingIn">Sing In</string>
    <string name="Join">Join</string>
    <string name="Or">Or</string>
    <string name="WelcomeBack">Welcome Back Sing in</string>
    <string name="DontHaveAccount">You dont Have Account ?</string>
    <string name="JoinNew">Join now</string>
    <string name="ForgetPassword">Forget Your Password ?</string>
    <string name="ResetPassword">Password Reset</string>
    <string name="EnterRecoveryEmail">Enter your  email and well send you a link to get back into your account.</string>
    <string name="Send">Send</string>
    <string name="YourInformation">Your Information</string>
    <string name="FullName">Full Name</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="Address1">Address 1</string>
    <string name="Address2">Address 2</string>
    <string name="zip">Zip</string>
    <string name="Save">Save</string>
    <string name="WeNeedInformation">We need this information to get your orders.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">246580909813505</string>
    <string name="fb_login_protocol_scheme">fb246580909813505</string>
    <string name="edit_your_information">Edit Your Information</string>


</resources>
