<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragments.InsertInformationFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/undraw_information"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="25dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <TextView
                android:id="@+id/textView4"
                style="@style/BigTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/YourInformation"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView7"
                style="@style/MudimeTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/WeNeedInformation"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FullNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/FullName"
                app:startIconDrawable="@drawable/ic_full_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/FullNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EmailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_marginTop="8dp"
                android:hint="@string/Email"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/FullNameET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >


                <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/EmailInput"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CountryET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/Country"
                app:startIconDrawable="@drawable/ic_country"

                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/EmailET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CountryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CityET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/City"
                app:startIconDrawable="@drawable/ic_city"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/CountryET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CityInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AddressOneET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/Address1"
                app:startIconDrawable="@drawable/ic_address_one"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/CityET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddressOneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AddressTowET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/Address2"
                app:startIconDrawable="@drawable/ic_address_tow"

                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/AddressOneET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddressTowInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ZipET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/zip"
                app:startIconDrawable="@drawable/ic_zip"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/AddressTowET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ZipInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"


                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/SaveinformationBTN"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline8"
                app:layout_constraintTop_toBottomOf="@+id/ZipET" />





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>